add_test(NAME hello_world COMMAND hello_world)
set_tests_properties(hello_world PROPERTIES PASS_REGULAR_EXPRESSION "Hello, world!")

add_executable(test_signal_utils test_signal_utils.c)
target_link_libraries(test_signal_utils PRIVATE signal_utils)
add_test(NAME test_signal_utils COMMAND test_signal_utils)
set_tests_properties(test_signal_utils PROPERTIES PASS_REGULAR_EXPRESSION "RMS: 1.0")

add_executable(test_lora_data_source test_lora_data_source.c)
target_link_libraries(test_lora_data_source PRIVATE lora_data_source)
add_test(NAME test_lora_data_source COMMAND test_lora_data_source)
set_tests_properties(test_lora_data_source PROPERTIES PASS_REGULAR_EXPRESSION "Read [0-9]+ bytes successfully")

add_executable(test_lora_add_crc test_lora_add_crc.c)
target_link_libraries(test_lora_add_crc PRIVATE lora_add_crc)
add_test(NAME test_lora_add_crc COMMAND test_lora_add_crc)
set_tests_properties(test_lora_add_crc PROPERTIES PASS_REGULAR_EXPRESSION "All CRC tests passed")

add_executable(test_lora_whitening test_lora_whitening.c)
target_link_libraries(test_lora_whitening PRIVATE lora_whitening)
add_test(NAME test_lora_whitening COMMAND test_lora_whitening)
set_tests_properties(test_lora_whitening PROPERTIES PASS_REGULAR_EXPRESSION "Whitening test passed")

add_executable(test_lora_hamming test_lora_hamming.c)
target_link_libraries(test_lora_hamming PRIVATE lora_hamming)
add_test(NAME test_lora_hamming COMMAND test_lora_hamming)
set_tests_properties(test_lora_hamming PROPERTIES PASS_REGULAR_EXPRESSION "All Hamming tests passed")

add_executable(test_lora_interleaver test_lora_interleaver.c)
target_link_libraries(test_lora_interleaver PRIVATE lora_interleaver)
add_test(NAME test_lora_interleaver COMMAND test_lora_interleaver)
set_tests_properties(test_lora_interleaver PROPERTIES PASS_REGULAR_EXPRESSION "Interleaver test passed")

add_executable(test_lora_graymap test_lora_graymap.c)
target_link_libraries(test_lora_graymap PRIVATE lora_graymap)
add_test(NAME test_lora_graymap COMMAND test_lora_graymap)
set_tests_properties(test_lora_graymap PROPERTIES PASS_REGULAR_EXPRESSION "Gray map test passed")

add_executable(test_lora_mod_fft test_lora_mod_fft.c)
target_link_libraries(test_lora_mod_fft PRIVATE lora_mod lora_fft_demod m)
add_test(NAME test_lora_mod_fft COMMAND test_lora_mod_fft)
set_tests_properties(test_lora_mod_fft PROPERTIES PASS_REGULAR_EXPRESSION "Mod/demod round-trip passed")

add_executable(test_lora_frame_sync test_lora_frame_sync.c)
target_link_libraries(test_lora_frame_sync PRIVATE lora_frame_sync)
add_test(NAME test_lora_frame_sync COMMAND test_lora_frame_sync)
set_tests_properties(test_lora_frame_sync PROPERTIES PASS_REGULAR_EXPRESSION "Frame sync test passed")
add_executable(test_lora_header test_lora_header.c)
target_link_libraries(test_lora_header PRIVATE lora_header)
add_test(NAME test_lora_header COMMAND test_lora_header)
set_tests_properties(test_lora_header PROPERTIES PASS_REGULAR_EXPRESSION "All header tests passed")
